--- a/TechGest/Index.Html
+++ b/TechGest/Index.Html
@@ -18,7 +18,7 @@
         <p class="Title-text">Il tuo partner informatico</p>
     </div>
     <section class="Service">
-        <div class="custom-shape-divider-top-1650463103">
+        <div class="wave1">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
                 <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
@@ -27,7 +27,7 @@
         </div>
 
         <div> 
-            <h1 class="Title-service">I nostri <br>Servizi</h1>
+            <h1 class="Title-service">I nostri <br>Servizi<font color="#23B5D3">!</font></h1>
             <div class="Item-service">
                 <div class="Software">
                     <div class="title-Software">
@@ -73,7 +73,7 @@
             </div>
         </div>
         
-            <div class="custom-shape-divider-bottom-1650472192">
+            <div class="wave3">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
                 <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
@@ -90,19 +90,31 @@
             Per qualsiasi info non esitate a contattarci inviando una mail ad assistenza@techgest.it</p>
     </section>
     <section class="Chisiamo">
-        <div class="custom-shape-divider-top-1650472037">
+        <div class="wave2">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
                 <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
                 <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
             </svg>
         </div>
-        <div class="Chisimao-title">
-            <h1>Chi <br>siamo</h1>
-        </div>
         <div>
-            <p>L’informatica è una scienza giovane. Erano gli anni ’50 quando il termine “informatica” fu adottato per la prima volta nella lingua tedesca. L’informatica studia le basi teoriche dell’informazione ed elabora, secondo procedimenti logici, le tecniche pratiche che permettono di trasferire e applicare le informazioni in sistemi elettronici automatizzati. Il termine deriva dalla contrazione delle parole “informazione” e “automatica”. Noi amiamo l’informatica, perché sappiamo che è una scienza utile, destinata a soddisfare i bisogni dell’uomo e a mettere al centro le sue esigenze. Il nostro scopo è quello di rendere l’informatica una scienza amica e amichevole per i nostri clienti. Per questo cerchiamo di spiegare con parole semplici e comprensibili i meravigliosi processi logici e matematici che ci permettono di aiutarli a gestire con successo la loro attività e il loro business. Quando si ama il proprio lavoro ci si appassiona e noi siamo appassionati ricercatori di soluzioni. Per ciascuno dei tuoi problemi abbiamo la risposta. Se la soluzione ancora non esiste, noi la cerchiamo, grazie alle fantastiche possibilità che l’informatica ci offre. Siamo qui per trasformare i tuoi bisogni in soddisfazione. Siamo la guida che ti aiuta a comprendere il funzionamento dei meccanismi e delle tecnologie informatiche che devi utilizzare nel tuo lavoro. Siamo il partner che sta al tuo fianco per tradurre la lingua della tecnologia nella lingua del business. La lingua che parli tu.</p>
+            <h1  class="Chisimao-title">Chi <br>Siamo<font color="#23B5D3">?</font></h1>
         </div>
+        <div class="Chisiamo-text">
+            <center><p>Il nostro scopo è quello di rendere l’informatica una scienza amica e amichevole per i nostri clienti. Per questo cerchiamo di spiegare con parole semplici e comprensibili i meravigliosi processi logici e matematici che ci permettono di aiutarli a gestire con successo la loro attività e il loro business. Quando si ama il proprio lavoro ci si appassiona e noi siamo appassionati ricercatori di soluzioni. Per ciascuno dei tuoi problemi abbiamo la risposta. Se la soluzione ancora non esiste, noi la cerchiamo, grazie alle fantastiche possibilità che l’informatica ci offre. Siamo qui per trasformare i tuoi bisogni in soddisfazione. Siamo la guida che ti aiuta a comprendere il funzionamento dei meccanismi e delle tecnologie informatiche che devi utilizzare nel tuo lavoro. Siamo il partner che sta al tuo fianco per tradurre la lingua della tecnologia nella lingua del business. La lingua che parli tu.</p></center>
+        </div>
+        <div class="custom-shape-divider-bottom-1650483930">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+                <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+                <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+            </svg>
+        </div>
+    </section >
+
+    <section class="Copi">
+        
+        <h1>ciao</h1>
     </section>
 
 </body>
