--- a/TechGest/Index.Html
+++ b/TechGest/Index.Html
@@ -27,7 +27,7 @@
         </div>
 
         <div> 
-            <h1 class="Title-service">I nostri <br>Servizi<font color="#23B5D3">!</font></h1>
+            <h1 class="Title-service">I nostri <br>Servizi<font color="#ff5656">!</font></h1>
             <div class="Item-service">
                 <div class="Software">
                     <div class="title-Software">
@@ -98,12 +98,12 @@
             </svg>
         </div>
         <div>
-            <h1  class="Chisimao-title">Chi <br>Siamo<font color="#23B5D3">?</font></h1>
+            <h1  class="Chisimao-title">Chi <br>Siamo<font color="#ff5656">?</font></h1>
         </div>
         <div class="Chisiamo-text">
             <center><p>Il nostro scopo è quello di rendere l’informatica una scienza amica e amichevole per i nostri clienti. Per questo cerchiamo di spiegare con parole semplici e comprensibili i meravigliosi processi logici e matematici che ci permettono di aiutarli a gestire con successo la loro attività e il loro business. Quando si ama il proprio lavoro ci si appassiona e noi siamo appassionati ricercatori di soluzioni. Per ciascuno dei tuoi problemi abbiamo la risposta. Se la soluzione ancora non esiste, noi la cerchiamo, grazie alle fantastiche possibilità che l’informatica ci offre. Siamo qui per trasformare i tuoi bisogni in soddisfazione. Siamo la guida che ti aiuta a comprendere il funzionamento dei meccanismi e delle tecnologie informatiche che devi utilizzare nel tuo lavoro. Siamo il partner che sta al tuo fianco per tradurre la lingua della tecnologia nella lingua del business. La lingua che parli tu.</p></center>
         </div>
-        <div class="custom-shape-divider-bottom-1650483930">
+        <div class="wave4">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
                 <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
@@ -113,8 +113,8 @@
     </section >
 
     <section class="Copi">
-        
-        <h1>ciao</h1>
+        <center><h3>Privacy Cookie Policy Techgest SaS di Girardi S. & C. - Techgest 2014 All rights reserved. Sede Legale: Via Schiavonesca Priula, 95 - 31044 Montebelluna (TV)<br>
+            P.IVA e C.F. 03943070262 - REA TV-310626</h3></center>
     </section>
 
 </body>
