--- a/Index.Html
+++ b/Index.Html
@@ -15,11 +15,16 @@
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </head>
 <body>
-    <div class="title">
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#Service">Servizi</a>
+        <a href="#about">Chi siamo</a>
+      </div>
+    <div class="title" id="home">
         <h1 class="Title">Tech Gest</h1>
         <p class="Title-text">Il tuo partner informatico</p>
     </div>
-    <section class="Service">
+    <section class="Service" id="Service">
         <div class="wave1">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
@@ -87,7 +92,7 @@
         <p class="client-text">L'assistenza è attiva dal lunedì al venerdì la mattina dalle ore 9:00 alle ore 12:30 ed il pomeriggio dalle ore 14:30 alle ore 18:00.
             Per qualsiasi info non esitate a contattarci inviando una mail ad assistenza@techgest.it</p>
     </section>
-    <section class="Chisiamo">
+    <section class="Chisiamo" id="about">
         <div class="wave2">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
